📝 content: obsidian commit

--- a/public/garden/ADHD/index.html
+++ b/public/garden/ADHD/index.html
@@ -1,3 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>ADHD | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>ADHD</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>ADHD</h1>
 <p>The worst acronym in the world. <i className="twa twa-upside-down-face"></i></p>
 <p>There is no deficit of attention, <strong>trust me</strong>. Have you ever seen someone with ADHD doing something they're interested in? There is no stopping them once they're in that space, they could go for hours without so much as stopping to blink. [[Hyperfocus]] is one hell of an experience.</p>
 <p>So then what is a better acronym? There have been many suggestions over the years but Dr. Edward Hallowell and John Ratey came up with VAST, Variable Attention Stimulus Trait.</p>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
