--- a/public/garden/Creativity & imagination/index.html
+++ b/public/garden/Creativity & imagination/index.html
@@ -1,10 +1,45 @@
-<p>202111152157
-Status: #🌱
-Tags: [[000 Zettelkasten/ADHD]]</p>
-<h1>Creativity &amp; imagination</h1>
-<p>The disorganisation and impulsiveness of the ADHD brain is what leads to the increase in creative and imaginative thoughts. You can't plan for creative ideas, so the lack of organisation and planning leads to spontaneous creative ideas.</p>
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>Creativity &amp; imagination | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>Creativity &amp; imagination</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>Creativity &amp; imagination</h1>
+<p>The disorganisation and impulsiveness of the [[ADHD]] brain is what leads to the increase in creative and imaginative thoughts. You can't plan for creative ideas, so the lack of organisation and planning leads to spontaneous creative ideas.</p>
 <hr>
 <h1>References</h1>
 <ol>
 <li>[[High degree of creativity and imagination]]</li>
 </ol>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
