--- a/public/garden/Zettelkasten/index.html
+++ b/public/garden/Zettelkasten/index.html
@@ -1,63 +1,124 @@
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>Zettelkasten | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>Zettelkasten</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>Zettelkasten</h1>
 <blockquote>
 <p>The zettelkasten is a method of note-taking and personal knowledge management</p>
 </blockquote>
 <p>The direct translation of zettelkasten is slip-box, a place to keep &amp; sort your notes.</p>
-<p>Traditionally the 5 most important components of a Zettelkasten system are:</p>
-<ol>
-<li>[[Fleeting notes]]
+<p>The 5 most important components of a Zettelkasten system are:</p>
+<h2>Fleeting notes</h2>
+<p><strong>Any idea that pops into your head needs to be captured.</strong></p>
+<p>Regardless of how, it needs to get out of your mind and onto something that can be seen. This then needs to be put together with other fleeting notes (captured ideas) from throughout your day into somewhat of an inbox, a place to keep track of these thoughts.</p>
+<p>Ways to capture an idea:</p>
 <ul>
-<li>Capture ideas from your mind.</li>
+<li>Napkin</li>
+<li>Receipt</li>
+<li>Voice recorder</li>
+</ul>
+<p>Places to keep your inbox:</p>
+<ul>
+<li>Notebook</li>
+<li>Notes app</li>
+</ul>
+<h2>Literature notes</h2>
+<p>When you consume content, take notes of what you don't want to forget or what you want to use in your own writing.</p>
+<p>Make sure your notes are [[Atomic]], in the smallest form they can possibly be. This is so you can combine your literature notes into permanent notes without their being overlap or redundancy.</p>
+<p>Be extremely selective in what you take notes on, make sure that it is relevant to things to care about or what to write about. And be even more selective with adding quotes, as you don't want to use that as a crutch for your lack of understanding.</p>
+<p>Make sure to include the bibliographic details, author &amp; source at the very least, so you know where you got the idea from.</p>
+<h2>Permanent notes</h2>
+<p>Every day, you should go through your inbox and seek to refine the fleeting &amp; literature notes that you've taken. Making connections and turning them into permanent notes.</p>
+<p>Ideally this should happen roughly everyday so that you don't forget the conceptual ideas behind the notes.</p>
+<blockquote>
+<p>Developing &gt; Collecting</p>
+</blockquote>
+<p>Your Zettelkasten isn't just for collecting all of your ideas, it is meant to develop your ideas and help expand your understanding. When you add a new permanent note, there are a number of things you need to think about:</p>
+<ul>
+<li>Whether it
+<ul>
+<li>contradicts;</li>
+<li>corrects;</li>
+<li>supports;</li>
+<li>or adds to what you've got in both your Zettelkasten and your mind?</li>
 </ul>
 </li>
-<li>[[Literature notes]]
+<li>Can you combine ideas to generate something new?</li>
+<li>What questions did they trigger?</li>
+</ul>
+<p>These are important questions to answer, as if you ignore them, you will end up with a Zettelkasten that is lacking these kinds of horizontally generated ideas.</p>
+<blockquote>
+<p>One idea = One note
+One note = One idea</p>
+</blockquote>
+<p>Your permanent notes should only encompass a single idea, so as not to cause overlapping, which will cause issues when you try to piece together your permanent notes into a whole piece of content.</p>
+<p><strong>Rules for a permanent note:</strong></p>
 <ul>
-<li>Capture ideas from the content you consume.</li>
+<li>One idea</li>
+<li>Full sentences</li>
+<li>Disclose sources</li>
+<li>Make references</li>
+<li>Try to be as
+<ul>
+<li>precise;</li>
+<li>clear;</li>
+<li>and brief as you can be.</li>
 </ul>
 </li>
-<li>[[Permanent notes]]
-<ul>
-<li>Atomise ([[Atomic]]) &amp; polish the ideas from the previous two steps.</li>
 </ul>
-</li>
-<li>[[Index notes]]
-<ul>
-<li>Link broader concepts down into specific [[Permanent notes]].</li>
-</ul>
-</li>
-<li>[[Keyword notes]]
-<ul>
-<li>Define unclear words.</li>
-</ul>
-</li>
-</ol>
-<p>But this is not set in stone, for example I have a slightly different system:</p>
-<ol>
-<li>[[Core zettel idea notes]]
-<ul>
-<li>These are essentially a combination of [[Fleeting notes]] &amp; [[Permanent notes]], though they have a few different stages of development (<i className="twa twa-seedling"></i> Seedling, <i className="twa twa-herb"></i> Budding &amp; <i className="twa twa-evergreen-tree"></i> Evergreen).</li>
-</ul>
-</li>
-<li>[[Reference notes]]
-<ul>
-<li>Which are esentially [[Literature notes]].</li>
-</ul>
-</li>
-<li>[[Maps of Content]]
-<ul>
-<li>Hub notes for a certain area/concept that are linked to from many other notes.</li>
-</ul>
-</li>
-</ol>
+<h2>Index notes</h2>
+<p>A starting point to falling down the rabbit hole, allowing you to navigate your Zettelkasten and find ideas when you need them.</p>
+<h2>Keyword notes</h2>
+<p>Help readers/yourself understand an unclear word by further describing it in it's own note and then linking to that note when you write that word.</p>
 <blockquote>
 <p>Do not brainstorm for a topic. Look into the slip-box instead to see where chains of notes have developed and ideas have been built up to clusters.</p>
 </blockquote>
 <blockquote>
 <p>Your topic is now based on what you have, not based on an unfounded idea about what the literature you are about to read might provide.</p>
 </blockquote>
-<p>— Sönke Ahrens</p>
+<p>- Sönke Ahrens</p>
 <p>Once you have enough notes bring them together as if they were cards scattered on a workbench and try placing them together to start making an initial rough draft.
 Don't just copy them, mold them to fit each other and the piece of content.</p>
 <blockquote>
 <p>Translate them into something coherent and embed them into the context of your argument while you build your argument out of the notes at the same time. Detect holes in your argument, fill them or change your argument.</p>
 </blockquote>
-<p>— Sönke Ahrens</p>
+<p>– Sönke Ahrens</p>
+<hr>
+<h1>References</h1>
+<ol>
+<li>How to Take Smart Notes by Sönke Ahrens</li>
+</ol>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
