--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
 		<main id="content" role="main" tabindex="-1">
-			<h1>Hello 11ty!</h1>
+			<h1>Home</h1>
 
 		</main>
 
