--- a/public/garden/Estimating time for tasks/index.html
+++ b/public/garden/Estimating time for tasks/index.html
@@ -1,7 +1,34 @@
-<p>202111301743
-Status: #🌱
-Tags: [[000 Zettelkasten/ADHD]]</p>
-<h1>Estimating time for tasks</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>Estimating time for tasks | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>Estimating time for tasks</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>Estimating time for tasks</h1>
 <p>Set an alarm to go off every 10 minutes or which ever chunk of time works best for you.</p>
 <p>Account for breaks</p>
 <p>Use time tracking apps
@@ -50,3 +77,11 @@ Make your estimate when you're feeling tired or unmotivated</li>
 <li>https://lifehacker.com/how-to-get-better-at-estimating-time-for-tasks-1626399924</li>
 <li>https://edgefoundation.org/tips-to-overcome-adhd-time-insensitivity/</li>
 </ol>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
