--- a/public/garden/Habit Creation/index.html
+++ b/public/garden/Habit Creation/index.html
@@ -1,3 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>Habit Creation | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>Habit Creation</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>Habit Creation</h1>
 <h2>The Habit loop</h2>
 <h3>1. Decide on a cue</h3>
 <ul>
@@ -53,3 +84,11 @@
 <li>[[Atomic Habits by James Clear]]</li>
 <li><a href="https://www.youtube.com/watch?v=nxjKup00oF8">How to Create a New Habit: Note From Future Self</a> by Jessica McCabe</li>
 </ol>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
