--- a/public/garden/Inexplicable lack of accomplishment/index.html
+++ b/public/garden/Inexplicable lack of accomplishment/index.html
@@ -1,7 +1,34 @@
-<p>202111152045
-Status: #🌱
-Tags: [[000 Zettelkasten/ADHD]]</p>
-<h1>Inexplicable lack of accomplishment</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>Inexplicable lack of accomplishment | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>Inexplicable lack of accomplishment</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>Inexplicable lack of accomplishment</h1>
 <p>Unable to meet their normal expectations for seemingly no reason. Perceived decline in ability with no apparent cause.</p>
 <p><strong>Personal anecdote:</strong>
 I went from being a top of the class math's student who got into the advanced stream to failing multiple units and moving into the general stream for math's.</p>
@@ -10,3 +37,11 @@ I went from being a top of the class math's student who got into the advanced st
 <ol>
 <li>[[Unexplained underachievement]]</li>
 </ol>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
