--- a/public/garden/Productivity system/index.html
+++ b/public/garden/Productivity system/index.html
@@ -1,7 +1,34 @@
-<p>202111162156
-Status: #🌿
-Tags: [[Workflow]]</p>
-<h1>Productivity system</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>Productivity system | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>Productivity system</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>Productivity system</h1>
 <h2>1. Reference/File system</h2>
 <p>These are the processes and systems for storing both <strong><em>physical documents</em></strong> as well as <strong><em>digital documents and information</em></strong>.</p>
 <h3>Solutions/approaches include:</h3>
@@ -58,3 +85,11 @@ Tags: [[Workflow]]</p>
 <ol>
 <li></li>
 </ol>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
