--- a/public/now/index.html
+++ b/public/now/index.html
@@ -1,3 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+	<!-- specify language: http://www.w3.org/TR/html401/struct/dirlang.html#h-8.1 -->
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- specify viewport: https://developers.google.com/speed/docs/insights/ConfigureViewport -->
+		<title>What I&#39;m Doing Now | Elly Loel</title>
+
+		<!-- Include stylesheets here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<link rel="stylesheet" href="/assets/css/style.css">
+	</head>
+	<body>
+		<header role="banner" class="site-header">
+			<a class="menu-link a11y-kb-only" href="#content">Jump to content</a>
+
+			<nav role="navigation">
+				<a class="site-logo" href="/" rel="home" title="to homepage">
+					<!-- link to home: http://microformats.org/wiki/rel-home -->
+					<h1>
+						&lt;e//y&gt;
+					</h1>
+				</a>
+			</nav>
+
+			<h1>What I&#39;m Doing Now</h1>
+		</header>
+
+		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+		<main id="content" role="main" tabindex="-1">
+			<h1>What I'm Doing Now</h1>
 <p>An on &amp; off log of what I'm currently doing/interested in. Slower paced than a twitter feed but less permanent then an <a href="/#about">about</a> page.
 <a href="https://nownownow.com/about">Now pages</a> are becoming more common, you should make one for yourself!</p>
 <h2>December, 2021</h2>
@@ -6,3 +37,11 @@
 <h2>November, 2021</h2>
 <p>I've been working on a presentation about [[neurodiversity]] with a few colleagues, which we'll be presenting internally on the 6th of December.</p>
 <p>I've also been working on fixing up this website as there's been plenty of big &amp; small bugs plaguing the site.</p>
+
+		</main>
+
+		<footer role="contentinfo" class="site-footer"></footer>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+	</body>
+</html>
