📝 content: obsidian commit

--- a/public/uses/index.html
+++ b/public/uses/index.html
@@ -31,6 +31,11 @@
 			<ul>
 <li>iPad Pro 2020</li>
 <li>M1 Macbook Pro 13 inch</li>
+<li>Apple Watch 5</li>
+<li>AirPods 3</li>
+<li>AirPods Max</li>
+<li>2x Dell G3223Q 32 inch 4k 144hz</li>
+<li>Aorus FO48U</li>
 <li></li>
 </ul>
 
