📝 content: obsidian commit

--- a/public/uses/index.html
+++ b/public/uses/index.html
@@ -28,14 +28,50 @@
 
 		<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
 		<main id="content" role="main" tabindex="-1">
-			<ul>
+			<h2>Hardware</h2>
+<ul>
+<li>M1 MacBook Pro 13 inch</li>
+<li>2x Dell G3223Q 32 inch 4k 144hz</li>
 <li>iPad Pro 2020</li>
-<li>M1 Macbook Pro 13 inch</li>
+<li>iPhone 12</li>
 <li>Apple Watch 5</li>
 <li>AirPods 3</li>
 <li>AirPods Max</li>
-<li>2x Dell G3223Q 32 inch 4k 144hz</li>
-<li>Aorus FO48U</li>
+<li>Nothing Ear(1)</li>
+<li>Panasonic Lumix G7</li>
+<li>Audio-Technica AT2020</li>
+<li>Glorious Model-O wireless</li>
+</ul>
+<h3>Keyboards</h3>
+<h4>Pretty in pink</h4>
+<ul>
+<li>Case and PCB: Ai03 Vega with the aluminium plate</li>
+<li>Switches: Alpacas lubed and filmed</li>
+<li>Key caps: SA Bliss pink alphas and modifiers</li>
+</ul>
+<h4>Ergo queen</h4>
+<ul>
+<li>Case and PCB: Corne keyboard</li>
+<li>Switches: Silent Alpacas</li>
+<li>Key caps: DSA Magic Girl light</li>
+</ul>
+<h4>Number cruncher</h4>
+<ul>
+<li>Case and PCB: Idyllic acrylic EXT65</li>
+<li>Switches: Banana splits lubed</li>
+<li>Key caps: IFK Comfy</li>
+</ul>
+<h4>NK65 Milkshake edition</h4>
+<ul>
+<li>Case and PCB: NK65</li>
+<li>Switches: NK_ silk yellows</li>
+<li>Key caps: Cherry Milkshake</li>
+</ul>
+<h2>Software</h2>
+<ul>
+<li>VS Code</li>
+<li>Obsidian</li>
+<li>Amplenote</li>
 <li></li>
 </ul>
 
